--- a/View/indexpaziente.html
+++ b/View/indexpaziente.html
@@ -54,12 +54,12 @@ https://templatemo.com/tm-566-medic-care
                             <li class="nav-item active">
                                 <a class="nav-link" href="index.html">HOME</a>
                             </li>
-                            <!--<li class="nav-item active">
-                                <a class="nav-link" href="index.html">APPUNTAMENTO</a>
-                            </li>-->
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#about">About</a>
-                            </li>-->
+                            <li class="nav-item active">
+                                <a class="nav-link" href="index.html">Prenota esame</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#about">Visualizza Esami Prenotati</a>
+                            </li>
 
                             <!--<li class="nav-item">
                                 <a class="nav-link" href="#timeline">Timeline</a>
@@ -78,15 +78,18 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="#booking">Booking</a>
                             </li>-->
 
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#contact">CONTATTI</a>
-                            </li>-->
-                            <li class="nav-item" >
+                            <li class="nav-item">
+                                <a class="nav-link" href="#contact">Visualizza Storico Esami</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#contact">Profilo Personale</a>
+                            </li>
+                            <!--<li class="nav-item" >
                                 <a class="nav-link" href="register.html">REGISTRATI</a>
-                            </li>
-                            <li class="nav-item" >
+                            </li>-->
+                            <!--<li class="nav-item" >
                                 <a class="nav-link" href="login.html">ACCEDI</a>
-                            </li>
+                            </li>-->
                         </ul>
                     </div>
 
