--- a/View/login.html
+++ b/View/login.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>ACCEDI</title>
+        <title>ACCESSO</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
         <link rel="stylesheet" href="logregstyle.css">
     </head>
     <body>
         <form method="post" action="login.php">
-            <h1>ACCEDI</h1>
+            <h1>ACCESSO</h1>
             <input type="text" id="email" placeholder="Email" name="email">
             <input type="password" id="Password" placeholder="Password" name="password">
             <button type="submit" name="login">ACCEDI</button>
