--- a/View/logregstyle.css
+++ b/View/logregstyle.css
@@ -1,10 +1,21 @@
 html,body {
+    background: url('images/gallery/pexels-shvetsa-4167561.jpg');
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-size: 200px 50px;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    background-size: cover;
     padding: 0;
     margin: 0;
     font: 14px 'Open sans', sans-serif;
     color: #333;
-    background-color: #4285f4;
 }
+@media only screen and (max-width: 767px) {
+    body {
+    background-image: url('images/gallery/pexels-shvetsa-4167561.jpg');
+    }
+    }
 h1 {
     margin: 0;
     margin-bottom: 20px;
