modifiche grafiche e funzionali

--- a/View/register.html
+++ b/View/register.html
@@ -11,11 +11,11 @@
             <input type="text" id="nome" placeholder="Nome" name="nome" required>
             <input type="text" id="cognome" placeholder="Cognome" name="cognome" required>
             <input type="text" id="email" placeholder="E-mail" name="email" required>
-            <input type="text" id="codice_fiscale" placeholder="Codice Fiscale" name="codice fiscale" required>
-            <input type="date" id="data_nascita" placeholder="Data di Nascita" name="data di nascita" required>
-            <input type="text" id="luogo_nascita" placeholder="Luogo di Nascita" name="luogo di nascita" required>
+            <input type="text" id="codicefiscale" placeholder="Codice Fiscale" name="codicefiscale" required>
+            <input type="date" id="datanascita" placeholder="Data di Nascita" name="datanascita" required>
+            <input type="text" id="luogonascita" placeholder="Luogo di Nascita" name="luogonascita" required>
             <input type="text" id="residenza" placeholder="Residenza" name="residenza" required>
-            <input type="text" id="numero_telefono" placeholder="Telefono/Cellulare" name="numero di telefono" required>
+            <input type="text" id="numerotelefono" placeholder="Telefono/Cellulare" name="numerotelefono" required>
             <input type="password" id="password" placeholder="Password" name="password" required>
             <button type="submit" name="register">REGISTRATI</button>
         </form>
