--- a/View/index.html
+++ b/View/index.html
@@ -52,7 +52,7 @@ https://templatemo.com/tm-566-medic-care
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="index.html">HOME</a>
+                                <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <!--<li class="nav-item active">
                                 <a class="nav-link" href="index.html">APPUNTAMENTO</a>
