--- a/View/indexpaziente.html
+++ b/View/indexpaziente.html
@@ -52,7 +52,7 @@ https://templatemo.com/tm-566-medic-care
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="index.html">HOME</a>
+                                <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <li class="nav-item active">
                                 <a class="nav-link" href="index.html">Prenota esame</a>
@@ -82,7 +82,7 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="#contact">Visualizza Storico Esami</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#contact">Profilo Personale</a>
+                                <a class="nav-link" href="profilopaziente.php">Profilo Personale</a>
                             </li>
                             <!--<li class="nav-item" >
                                 <a class="nav-link" href="register.html">REGISTRATI</a>
