--- a/View/indexpaziente.html
+++ b/View/indexpaziente.html
@@ -52,10 +52,10 @@ https://templatemo.com/tm-566-medic-care
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="index.html">Home</a>
+                                <a class="nav-link" href="indexpaziente.html">Home</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="index.html">Prenota esame</a>
+                                <a class="nav-link" href="prenotaesame.html">Prenota esame</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#about">Visualizza Esami Prenotati</a>
@@ -274,7 +274,7 @@ https://templatemo.com/tm-566-medic-care
                 </div>
             </section>-->
 
-            <section class="section-padding pb-0" id="reviews">
+            <!--<section class="section-padding pb-0" id="reviews">
                 <div class="container">
                     <div class="row">
 
@@ -376,7 +376,7 @@ https://templatemo.com/tm-566-medic-care
 
                     </div>
                 </div>
-            </section>
+            </section>-->
 
             <!--<section class="section-padding" id="booking">
                 <div class="container">
