--- a/View/indexmedico.html
+++ b/View/indexmedico.html
@@ -54,16 +54,16 @@ https://templatemo.com/tm-566-medic-care
                             <li class="nav-item active">
                                 <a class="nav-link" href="index.html">Home</a>
                             </li>
-                            <!--<li class="nav-item active">
-                                <a class="nav-link" href="index.html">APPUNTAMENTO</a>
-                            </li>-->
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#about">About</a>
-                            </li>-->
+                            <li class="nav-item active">
+                                <a class="nav-link" href="index.html">Storico esami</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#about">Visualizza agenda</a>
+                            </li>
 
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#timeline">Timeline</a>
-                            </li>-->
+                            <li class="nav-item">
+                                <a class="nav-link" href="#timeline">Carica slot per appuntamento</a>
+                            </li>
 
                             <div class="navbar-brand d-none d-lg-block">
                                 AmbulaCare
@@ -74,19 +74,28 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="#reviews">Testimonials</a>
                             </li>-->
 
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#booking">Booking</a>
-                            </li>-->
+                            <li class="nav-item">
+                                <a class="nav-link" href="#booking">Recensioni</a>
+                            </li>
 
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#contact">CONTATTI</a>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#contact">Statistiche</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#contact">Ricerca pazienti</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#booking">Recensioni</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="profiloadmin.php">Profilo Personale</a>
+                            </li>
+                            <!--<li class="nav-item" >
+                                <a class="nav-link" href="register.html">REGISTRATI</a>
                             </li>-->
-                            <li class="nav-item" >
-                                <a class="nav-link" href="register.html">Registrati</a>
-                            </li>
-                            <li class="nav-item" >
-                                <a class="nav-link" href="login.html">Accedi</a>
-                            </li>
+                            <!--<li class="nav-item" >
+                                <a class="nav-link" href="login.html">ACCEDI</a>
+                            </li>-->
                         </ul>
                     </div>
 
@@ -166,7 +175,7 @@ https://templatemo.com/tm-566-medic-care
                     <div class="row">
 
                         <div class="col-lg-12 col-12 ps-0">
-                            <img src="images/gallery/pexels-rdne-6129507.jpg" class="img-fluid galleryImage" alt="img home page" title="img home page">
+                            <img src="images/gallery/pexels-pixabay-356040.jpg" class="img-fluid galleryImage" alt="img home page" title="img home page">
                         </div>
 
                         <!--<div class="col-lg-6 col-6 pe-0">
@@ -271,7 +280,7 @@ https://templatemo.com/tm-566-medic-care
                 </div>
             </section>-->
 
-            <section class="section-padding pb-0" id="reviews">
+            <!--<section class="section-padding pb-0" id="reviews">
                 <div class="container">
                     <div class="row">
 
@@ -373,7 +382,7 @@ https://templatemo.com/tm-566-medic-care
 
                     </div>
                 </div>
-            </section>
+            </section>-->
 
             <!--<section class="section-padding" id="booking">
                 <div class="container">
