--- a/View/prenotaesame.html
+++ b/View/prenotaesame.html
@@ -1,121 +1,122 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta name="description" content="">
-        <meta name="author" content="">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <title>Ambula Care</title>
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
-        <!-- CSS FILES -->        
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <title>Ambula Care</title>
 
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- CSS FILES -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
 
-        <link href="css/bootstrap-icons.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-        <link href="css/owl.carousel.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap"
+        rel="stylesheet" />
 
-        <link href="css/owl.theme.default.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
 
-        <link href="css/templatemo-medic-care.css" rel="stylesheet">
+    <link href="css/bootstrap-icons.css" rel="stylesheet" />
 
-        <link rel="stylesheet" href="prenotaesame.css">
-<!--
+    <link href="css/owl.carousel.min.css" rel="stylesheet" />
+
+    <link href="css/owl.theme.default.min.css" rel="stylesheet" />
+
+    <link href="css/templatemo-medic-care.css" rel="stylesheet" />
+
+    <link rel="stylesheet" href="prenotaesame.css" />
+    <!--
 
 TemplateMo 566 Medic Care
 
 https://templatemo.com/tm-566-medic-care
 
 -->
-    </head>
-    
-    <body id="top">
-    
-        <main>
+</head>
 
-            <nav class="navbar navbar-expand-lg bg-light fixed-top shadow-lg">
-                <div class="container">
-                    <div class="navbar-brand mx-auto d-lg-none">
-                        AmbulaCare
-                        <strong class="d-block">HEALTH SPECIALISTS</strong>
-                    </div>
+<body id="top">
+    <main>
+        <nav class="navbar navbar-expand-lg bg-light fixed-top shadow-lg">
+            <div class="container">
+                <div class="navbar-brand mx-auto d-lg-none">
+                    AmbulaCare
+                    <strong class="d-block">HEALTH SPECIALISTS</strong>
+                </div>
 
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav mx-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="indexpaziente.html">Home</a>
-                            </li>
-                            <li class="nav-item active">
-                                <a class="nav-link" href="prenotaesame.html">Prenota esame</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#about">Visualizza Esami Prenotati</a>
-                            </li>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="indexpaziente.html">Home</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="prenotaesame.html">Prenota esame</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">Visualizza Esami Prenotati</a>
+                        </li>
 
-                            <!--<li class="nav-item">
+                        <!--<li class="nav-item">
                                 <a class="nav-link" href="#timeline">Timeline</a>
                             </li>-->
 
-                            <div class="navbar-brand d-none d-lg-block">
-                                AmbulaCare
-                                <strong class="d-block">HEALTH SPECIALISTS</strong>
-                            </div>
+                        <div class="navbar-brand d-none d-lg-block">
+                            AmbulaCare
+                            <strong class="d-block">HEALTH SPECIALISTS</strong>
+                        </div>
 
-                            <!--<li class="nav-item">
+                        <!--<li class="nav-item">
                                 <a class="nav-link" href="#reviews">Testimonials</a>
                             </li>-->
 
-                            <!--<li class="nav-item">
+                        <!--<li class="nav-item">
                                 <a class="nav-link" href="#booking">Booking</a>
                             </li>-->
 
-                            <li class="nav-item">
-                                <a class="nav-link" href="#contact">Visualizza Storico Esami</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="profilopaziente.php">Profilo Personale</a>
-                            </li>
-                            <!--<li class="nav-item" >
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">Visualizza Storico Esami</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="profilopaziente.php">Profilo Personale</a>
+                        </li>
+                        <!--<li class="nav-item" >
                                 <a class="nav-link" href="register.html">REGISTRATI</a>
                             </li>-->
-                            <!--<li class="nav-item" >
+                        <!--<li class="nav-item" >
                                 <a class="nav-link" href="login.html">ACCEDI</a>
                             </li>-->
-                        </ul>
-                    </div>
-
+                    </ul>
                 </div>
-            </nav>
-
-        </main>
-        <form action="#">
-            <h3><label for="lang">Tipologia</label></h3>
-            <select name="languages" id="lang">
-              <option value="select">Seleziona una tipologia</option>
-              <option value="dentista">dentista</option>
-              <option value="oculista">oculista</option>
-              <option value="otorino">otorino</option>
-              <option value="cardiologo">cardiologo</option>
-              <option value="radiologo">radiologo</option>
-              <option value="neurologo">neurologo</option>
-              <option value="urologo">urologo</option>
-              <option value="neurofisiopatologo">neurofisiopatologo</option>
+            </div>
+        </nav>
+    </main>
+    <form action="#">
+        <div class="form-group">
+            <h3><label for="categ">Tipologia</label></h3>
+            <select name="languages" id="categ" class="form-select">
+                <option value="select">Seleziona una tipologia</option>
+                <option value="dentista">dentista</option>
+                <option value="oculista">oculista</option>
+                <option value="otorino">otorino</option>
+                <option value="cardiologo">cardiologo</option>
+                <option value="radiologo">radiologo</option>
+                <option value="neurologo">neurologo</option>
+                <option value="urologo">urologo</option>
+                <option value="neurofisiopatologo">neurofisiopatologo</option>
             </select>
-            
-      </form>
+        </div>
+        <button type="submit" class="btn btn-primary">Cerca</button>
+    </form>
 
-       <!--<footer class="site-footer section-padding" id="contact">
+    <!--<footer class="site-footer section-padding" id="contact">
             <div class="container">
                 <div class="row">
 
@@ -173,18 +174,19 @@ https://templatemo.com/tm-566-medic-care
             </section>
         </footer>-->
 
-        <!-- JAVASCRIPT FILES -->
-        <script src="js/jquery.min.js"></script>
-        <script src="js/bootstrap.bundle.min.js"></script>
-        <script src="js/owl.carousel.min.js"></script>
-        <script src="js/scrollspy.min.js"></script>
-        <script src="js/custom.js"></script>
-<!--
+    <!-- JAVASCRIPT FILES -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/scrollspy.min.js"></script>
+    <script src="js/custom.js"></script>
+    <!--
 
 TemplateMo 566 Medic Care
 
 https://templatemo.com/tm-566-medic-care
 
 -->
-    </body>
+</body>
+
 </html>
