--- a/View/casipaziente.css
+++ b/View/casipaziente.css
@@ -2,7 +2,6 @@ html,body {
     background: url('images/gallery/pexels-thirdman-5327648.jpg');
     background-repeat: no-repeat;
     background-position: 0 0;
-    background-size: 200px 50px;
     -moz-background-size: cover;
     -webkit-background-size: cover;
     background-size: cover;
@@ -22,50 +21,18 @@ html,body {
     background-image: url('images/gallery/pexels-thirdman-5327648.jpg');
     }
     }
-h1 {
-    margin: 0;
-    margin-bottom: 20px;
-	font-size: 24px;
+#tendina{
+    margin-right: 1300px;
+    margin-bottom: 300px;
 }
-form {
-    padding: 40px;
-    width: 360px;
-    margin: 10px auto;
-    position: absolute;
-    left: 20 px;
-}
-input {
-	font: 14px 'Open Sans', sans-serif;
-    border: 2px solid #ccc;
-    padding: 6px;
-    display: flex;
-    width: 96%;
-    margin-bottom: 10px;
-    margin-top: 10px;
-}
-label {
-    margin-bottom: 10px;
-    margin-top: 10px;
+h4, label {
+    font: 'Open sans', sans-serif;
     outline: 0;
-    display: flex;
     color: #ffffff;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    margin-left: 10 px;
-    padding: 4px;
-    border-radius: 9px;
-  }
-  option{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
-    color: #333;
   }
 
   select {
-    margin-bottom: 10px;
-    margin-top: 10px;
+    font: 'Open sans', sans-serif;
     outline: 0;
     background: #ffffff;
     border: 1px solid rgb(0, 0, 0);
