--- a/View/prenotaesame.css
+++ b/View/prenotaesame.css
@@ -1,4 +1,4 @@
-html,body {
+/* html,body {
     background: url('images/gallery/pexels-thirdman-5327648.jpg');
     background-repeat: no-repeat;
     background-position: 0 0;
@@ -71,4 +71,4 @@ label {
     border: 1px solid rgb(0, 0, 0);
     padding: 4px;
     border-radius: 9px;
-  }
+  } */
