--- a/View/prenotaesame.html
+++ b/View/prenotaesame.html
@@ -28,10 +28,10 @@
 
     <link href="css/templatemo-medic-care.css" rel="stylesheet" />
 
-        <link rel="stylesheet" href="casipaziente.css">
+    <link rel="stylesheet" href="casipaziente.css">
 <!--
     <link rel="stylesheet" href="prenotaesame.css" />
-    <!--
+    
 
 TemplateMo 566 Medic Care
 
@@ -63,7 +63,7 @@ https://templatemo.com/tm-566-medic-care
                             <a class="nav-link" href="prenotaesame.html">Prenota esame</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#about">Visualizza Esami Prenotati</a>
+                            <a class="nav-link" href="visualizzaesamiprenotati.html">Visualizza Esami Prenotati</a>
                         </li>
 
                         <!--<li class="nav-item">
@@ -84,7 +84,7 @@ https://templatemo.com/tm-566-medic-care
                             </li>-->
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#contact">Visualizza Storico Esami</a>
+                            <a class="nav-link" href="visualizzastoricoesami">Visualizza Storico Esami</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="profilopaziente.php">Profilo Personale</a>
@@ -118,7 +118,7 @@ https://templatemo.com/tm-566-medic-care
                             <option value="neurofisiopatologo">neurofisiopatologo</option>
                         </select>
                     </div>
-                    <button type="submit" class="btn btn-primary">Cerca</button>
+                    <button type="submit" class="btn btn-primary">Effettua ricerca</button>
                 </form>
 
             </div>
