--- a/View/casiadmin.css
+++ b/View/casiadmin.css
@@ -1,4 +1,4 @@
-html,body {
+/*html,body {
     background: url('images/gallery/pexels-tima-miroshnichenko-5452223.jpg');
     background-repeat: no-repeat;
     background-position: 0 0;
@@ -42,4 +42,4 @@ input{
     border: 1px solid rgb(0, 0, 0);
     padding: 4px;
     border-radius: 9px;
-  }
+  }*/
