--- a/View/indexpaziente.html
+++ b/View/indexpaziente.html
@@ -25,6 +25,8 @@
         <link href="css/owl.theme.default.min.css" rel="stylesheet">
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
+
+        <link href="casipaziente.css" rel="stylesheet">
 <!--
 
 TemplateMo 566 Medic Care
@@ -79,7 +81,7 @@ https://templatemo.com/tm-566-medic-care
                             </li>-->
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#contact">Visualizza Storico Esami</a>
+                                <a class="nav-link" href="visualizzastoricoesami">Visualizza Storico Esami</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="profilopaziente.php">Profilo Personale</a>
