--- a/View/visualizzaesamiprenotati.html
+++ b/View/visualizzaesamiprenotati.html
@@ -62,7 +62,7 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="prenotaesame.html">Prenota esame</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#about">Visualizza Esami Prenotati</a>
+                                <a class="nav-link" href="visualizzaesamiprenotati.html">Visualizza Esami Prenotati</a>
                             </li>
 
                             <!--<li class="nav-item">
@@ -83,7 +83,7 @@ https://templatemo.com/tm-566-medic-care
                             </li>-->
 
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzaesamiprenotati.html">Visualizza Storico Esami</a>
+                                <a class="nav-link" href="visualizzastoricoesami.html">Visualizza Storico Esami</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="profilopaziente.php">Profilo Personale</a>
@@ -101,29 +101,82 @@ https://templatemo.com/tm-566-medic-care
             </nav>
 
         </main>
-        <form action="#" id="tendina">
-            <div class="form-group" >
-                <h4><label for="categ">Tipologia</label></h4>
-                <select name="languages" id="categ" class="form-select">
-                    <option value="select">Seleziona una tipologia</option>
-                    <option value="dentista">dentista</option>
-                    <option value="oculista">oculista</option>
-                    <option value="otorino">otorino</option>
-                    <option value="cardiologo">cardiologo</option>
-                    <option value="radiologo">radiologo</option>
-                    <option value="neurologo">neurologo</option>
-                    <option value="urologo">urologo</option>
-                    <option value="neurofisiopatologo">neurofisiopatologo</option>
-                </select>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <form action="#">
+                        <div class="form-group" >
+                            <h3><label for="categ">Tipologia</label></h3>
+                            <select name="languages" id="categ" class="form-select">
+                                <option value="select">Seleziona una tipologia</option>
+                                <option value="dentista">dentista</option>
+                                <option value="oculista">oculista</option>
+                                <option value="otorino">otorino</option>
+                                <option value="cardiologo">cardiologo</option>
+                                <option value="radiologo">radiologo</option>
+                                <option value="neurologo">neurologo</option>
+                                <option value="urologo">urologo</option>
+                                <option value="neurofisiopatologo">neurofisiopatologo</option>
+                            </select>
+                        </div>
+                            <br>
+                                <div>
+                                    <input type="date" id="dataprenot" placeholder="Data prenotazione" name="dataprenot" required>
+                                    </input>
+                                    </div>
+                                    <br>
+                            <button type="submit" class="btn btn-primary">Effettua Ricerca</button>
+                    </form>
+                </div>
             </div>
-            <br>
-            <div>
-            <input type="date" id="dataprenot" placeholder="Data prenotazione" name="dataprenot" required>
-            </input>
-            </div>
-            <br><br>
-            <button type="submit" class="btn btn-primary">Cerca</button>
-        </form>
+        </div>
+        
+        <div class="col-9" id="elenco">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">Data</th>
+                        <th scope="col">Ora</th>
+                        <th scope="col">Medico</th>
+                        <th scope="col">Tipologia</th>
+                        <th scope="col">Costo</th>
+                        <th scope="col">Azioni</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>01/06/2024</td>
+                        <td>10:00</td>
+                        <td>Papile</td>
+                        <td>Cardiologo</td>
+                        <td>50€</td>
+                        <td><button class="btn btn-primary">Aggiungi Recensione</button></td>
+                        <td><button class="btn btn-primary">Visualizza Referto</button></td>
+                    </tr>
+                    <tr>
+                        <td>10/08/2024</td>
+                        <td>12:00</td>
+                        <td>Iannotti</td>
+                        <td>Neurologo</td>
+                        <td>80€</td>
+                        <td><button class="btn btn-primary">Aggiungi Recensione</button></td>
+                        <td><button class="btn btn-primary">Visualizza Referto</button></td>
+                    </tr>
+                    <tr>
+                        <td>11/12/2024</td>
+                        <td>09:00</td>
+                        <td>Di Simone</td>
+                        <td>Oculistica</td>
+                        <td>50€</td>
+                        <td><button class="btn btn-primary">Aggiungi Recensione</button></td>
+                        <td><button class="btn btn-primary">Visualizza Referto</button></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+</div>
        <!--<footer class="site-footer section-padding" id="contact">
             <div class="container">
                 <div class="row">
